--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Helvetica Neue', 'Arial', sans-serif;
       color: #111;
-      background-color: #000;
+      background-color: #ffe263;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -49,11 +49,11 @@
       font-size: 1em;
       margin: 0 0 0.2em 0;
       font-weight: normal;
-      color: #ffffff;
+      color: #111;
     }
     .story-link {
       font-size: 0.8em;
-      color: #fedd6e;
+      color: #94ff5b;
       text-decoration: none;
     }
     .story-link:hover {
@@ -61,7 +61,7 @@
     }
     .discuss-link {
       font-size: 0.8em;
-      color: #555;
+      color: #f84949;
       margin-left: 0.5em;
       text-decoration: none;
     }
