--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     }
     .story-link {
       font-size: 0.8em;
-      color: #94ff5b;
-      text-decoration: none;
+      color: #ffffff;
+      text-decoration: underline;
     }
     .story-link:hover {
       text-decoration: underline;
@@ -79,7 +79,7 @@
       <ul id="top-stories-list"></ul>
     </div>
     <div class="image-container">
-      <img src="https://github.com/MarzGoldman/sumbuz.com/bunny.png" alt="Image">
+      <img src="https://github.com/MarzGoldman/sumbuz.com/blob/main/bunny.PNG" alt="Image">
     </div>
   </div>
   <script>
