--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <ul id="top-stories-list"></ul>
     </div>
     <div class="image-container">
-      <img src="https://github.com/MarzGoldman/sumbuz.com/blob/main/bunny.PNG" alt="Image">
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpngtree.com%2Ffree-animals-png%2Frabbit&psig=AOvVaw0M2qSKc9QjhjVt10xi-vJw&ust=1716540594301000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCODpw5eyo4YDFQAAAAAdAAAAABAd" alt="Image">
     </div>
   </div>
   <script>
